--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Air Quality</string>
+    <string name="activity_city_detail">City detail</string>
 
     <string name="signed_in">Signed in!</string>
     <string name="signed_out">Signed out!</string>
