--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Air Quality</string>
     <string name="activity_locations">City locations</string>
-    <string name="activity_city_detail">City detail</string>
+    <string name="activity_location_detail">Location details</string>
 
     <string name="signed_in">Signed in!</string>
     <string name="signed_out">Signed out!</string>
