Add tolerance levels for each AQI parameter Add an image with the AQI status

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="txtLocationDetailsValue">Value</string>
     <string name="txtLocationDetailsUnits">Units</string>
     <string name="txtLocationDetailsLastUpdate">Last Update</string>
+    <string name="txtLocationDetailsAQI">AQI</string>
 
     <!-- Locations List -->
     <string name="txtLocationPosition">#</string>
