Add address from each location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <!-- Locations List -->
     <string name="txtLocationPosition">#</string>
     <string name="txtLocationCode">Code</string>
+    <string name="txtLocationAddress">Address</string>
     <string name="txtLocationLatitude">Latitude</string>
     <string name="txtLocationLongitude">Longitude</string>
 
